--- a/index.html
+++ b/index.html
@@ -8,29 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="foto">
-        <img src="foto.png" alt="Foto Perfil">
-     </div>
-          
-    <h1 class="nome">Ana paula Bacelar</h1>
-    <h2 class="insta">@anapaula_bacelar</h2>
-    <section class="corpo">
-              <div class="itens1">
-                <a href="https://cisassessment.com.br/degustacao/anabacelar" target="_blank">Descubra qual seu Perfil Comportamental</a>
-              </div>
-              <div class="itens">
-                <a href="https://www.instagram.com/p/CPVixuPhv-S/?utm_medium=copy_link" target="_blank">Planner Positive-se</a>
-              </div>
-              <div class="itens">
-                <a href="https://api.whatsapp.com/send/?phone=5586998219142&text&type=phone_number&app_absent=0" target="_blank">Fale comigo</a>
-              </div>
-              <div class="itens">
-                <a href="https://www.instagram.com/empresarialpositive/" target="_blank">Positive Solução Empresarial</a>
-              </div>  
-    </section>
-    <footer class="rodape">
-        <ul>&copy;Desenvolvido por Rubens Rodrigues</ul>
+<body>    
+
+  <div class="container">
+
+    <div>
+      <img src="foto.png" alt="Foto Perfil">
+    </div> 
+
+    <div class="nome">         
+      <h1>Ana Paula Bacelar</h1>
+      <h2>@anapaula_bacelar</h2>
+    </div>
+
+    <div class="itens">
+        <ul>
+        <li id="a1"><a href="https://www.positiveempresarial.com.br" target="_blank">Site Positive Group</a></li>
+        <li><a href="https://cisassessment.com.br/degustacao/anabacelar" target="_blank">Descubra qual seu Perfil Comportamental</a></li>
+        <p>Canais</p>
+        <li><a href="https://www.instagram.com/p/CPVixuPhv-S/?utm_medium=copy_link" target="_blank">Positive-se Mulher</a></li>
+        <li><a href="https://www.instagram.com/positive.Group/" target="_blank">Positive Solução Empresarial</a></li>
+        <li><a href="https://api.whatsapp.com/send/?phone=5586998219142&text&type=phone_number&app_absent=0" target="_blank">Fale comigo</a></li>
+      </ul>
+    </div>
+    
+    <footer id="rodape">
+      <ul>&copy;Desenvolvido por Rubens Rodrigues</ul>
     </footer>
+  </div> 
+  
 </body>
 </html>
