--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>    
-
+<body> 
   <div class="container">
-
     <div>
-      <img src="foto.png" alt="Foto Perfil">
+      <img src="img/foto.png" alt="Foto Perfil">
     </div> 
-
     <div class="nome">         
       <h1>Ana Paula Bacelar</h1>
       <h2>@anapaula_bacelar</h2>
     </div>
-
     <div class="itens">
         <ul>
         <li id="a1"><a href="https://www.positiveempresarial.com.br" target="_blank">Site Positive Group</a></li>
@@ -30,12 +26,10 @@
         <li><a href="https://www.instagram.com/positive.Group/" target="_blank">Positive Solução Empresarial</a></li>
         <li><a href="https://api.whatsapp.com/send/?phone=5586998219142&text&type=phone_number&app_absent=0" target="_blank">Fale comigo</a></li>
       </ul>
-    </div>
-    
+    </div>    
     <footer id="rodape">
       <ul>&copy;Desenvolvido por Rubens Rodrigues</ul>
     </footer>
   </div> 
-  
 </body>
 </html>
